# server/api/controllers/apartments/apartments.controller.ts
@@ -5,12 +5,19 @@ export class Controller {
   all(req: Request, res: Response): void {
     const page = +req.query.page || 1;
     const itemsPerPage = +req.query.per_page || 20;
-    Apartment.find({})
+
+    const query: any = {};
+
+    if(req.query.status) {
+      query.status = req.query.status;
+    }
+
+    Apartment.find(query)
       .sort({ listedAt: -1 })
       .skip((page-1) * itemsPerPage)
       .limit(itemsPerPage)
       .then(apartments => {
-        Apartment.count().then(noAppartments => {
+        Apartment.estimatedDocumentCount().then(noAppartments => {
           res.set('page-size',  Math.ceil(noAppartments >0 ? noAppartments/itemsPerPage: 0)+'');
           res.set('Access-Control-Expose-Headers', 'page-size');
           res.json(apartments);
@@ -18,11 +25,14 @@ export class Controller {
       });
   }
 
-  byId(req: Request, res: Response): void {
-    // ExamplesService.byId(req.params.id).then(r => {
-    //   if (r) res.json(r);
-    //   else res.status(404).end();
-    // });
+  update(req: Request, res: Response): void {
+    const apartment = req.body as IApartmentModel;
+
+    Apartment.findOneAndUpdate({_id : req.params.id}, {$set: apartment},{useFindAndModify: false, new: true}).then(updatedApartment => {
+      res.json(updatedApartment);
+    }).catch(error => {
+      res.status(500).json(error);
+    })
   }
 }
 export default new Controller();
