# server/api/controllers/apartments/apartments.router.ts
@@ -2,4 +2,4 @@ import express from 'express';
 import controller from './apartments.controller'
 export default express.Router()
     .get('/', controller.all)
-    .get('/:id', controller.byId);
+    .put('/:id', controller.update);
